# routes/orderRoute.js
@@ -3,7 +3,6 @@ const router = express.Router()
 const orderController = require('../controllers/orderController')
 
 router.get('/orders', orderController.getOrders)
-router.put('/addItem/:orderId', orderController.addItemsToOrder)
-// router.put('/api/orders/status/:id', orderController.updateOrderStatus)
+router.get('/orderTotal/:orderId', orderController.calculateOrderTotal);
 
 module.exports = router
